Set the navbar on fixed position on mobile devices and changed the 'home' image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,7 @@ nav .brand-logo {
     color: #000;
     font-family: Montserrat, Georgia, sans-serif;
     font-weight: 700;
+    margin-left: 30px;
 }
 
 nav ul a {
@@ -22,10 +23,12 @@ nav ul a {
     font-size: 15px;
     font-weight: 700;
     text-transform: uppercase;
+    height: 50px;
 }
 
 nav ul a:hover {
-    text-decoration: underline;
+    border-bottom: 3px solid #000;
+    background-color: inherit;
 }
 
 nav ul {
@@ -64,7 +67,7 @@ nav .button-collapse i {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url("../images/nice.png");
+    background: url("../images/image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -74,6 +77,11 @@ nav .button-collapse i {
 
 .card .card-content {
     height: 120px;
+}
+
+.author {
+    background-color: mediumturquoise;
+
 }
 
 .container {
@@ -124,6 +132,16 @@ nav .button-collapse i {
     text-transform: uppercase;
     margin-right: 0;
     font-weight: bold;
+}
+
+.card .card-content p {
+    margin: 0;
+    color: #000;
+}
+
+.country-page {
+    font-family: cursive;
+    color: #000;
 }
 
 h1 {
@@ -230,6 +248,11 @@ h5 {
     }
     nav .brand-logo {
         margin-left: 5px;
+    }
+    nav {
+        position: fixed;
+        top: 0;
+        z-index: 2;
     }
 }
 
